front page heading and img carousel built

--- a/skateOrDieStarterTemplate/index.html
+++ b/skateOrDieStarterTemplate/index.html
@@ -14,6 +14,7 @@
 </head>
 
 <body> 
+  <div class="container-fluid">
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">SKATE</a>
@@ -43,6 +44,53 @@
       </div>
     </div>
   </nav>
+  <div class="sectionLight">
+    <div class="row">
+      <div class="col-sm-12">
+        <div class="jumbotron jumbotron-fluid">
+          <div class="container">
+            <h1 class="display-3">Welcome to my World</h1>
+            <p class="lead">Total Radness since 1987</p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col"></div>
+      <div class="col-sm-12 col-md-6">
+        <div id="mainCarousel" class="carousel slide" data-bs-ride="carousel">
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img src="assets/board.jpg" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
+              <img src="assets/tipsolahraga.jpg" class="d-block w-100" alt="...">
+              <div class="carousel-caption d-none d-md-block">
+                <h3>Skate for life!</h3>
+                <p>Show me some tricks!</p>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img src="assets/longboard.jpg" class="d-block w-100" alt="...">
+            </div>
+          </div>
+          <button class="carousel-control-prev" type="button" data-bs-target="#mainCarousel" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#mainCarousel" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
+        </div>
+
+      </div>
+      <div class="col"></div>
+    </div>
+  </div>
+  
+</div>
 
 
 
