--- a/skateOrDieStarterTemplate/index.html
+++ b/skateOrDieStarterTemplate/index.html
@@ -89,6 +89,52 @@
       <div class="col"></div>
     </div>
   </div>
+  <!-- Section Two -->
+  <div class="sectionDark">
+    <div class="row">
+      <div class="col-sm-12 col-md-1 offset-md-2">
+        <img class="img-fluid" src="assets/prodigy.png">
+      </div>
+      <div class="col-sm-12 col-md-6">
+        <div class="row">
+          <div class="col-sm-12">
+            <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+              sed do eiusmod tempor incididunt ut labore et dolore magna 
+              aliqua. Ut enim ad minim veniam, quis nostrud exercitation 
+              ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+              Duis aute irure dolor in reprehenderit in voluptate velit 
+              esse cillum dolore eu fugiat nulla pariatur. Excepteur sint 
+              occaecat cupidatat non proident, sunt in culpa qui officia 
+              deserunt mollit anim id est laborum."</p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-sm-12 col-md-9">
+            <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+              sed do eiusmod tempor incididunt ut labore et dolore magna 
+              aliqua. Ut enim ad minim veniam, quis nostrud exercitation 
+              ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+              Duis aute irure dolor in reprehenderit in voluptate velit 
+              esse cillum dolore eu fugiat nulla pariatur. Excepteur sint 
+              occaecat cupidatat non proident, sunt in culpa qui officia 
+              deserunt mollit anim id est laborum."</p>
+          </div>
+          <div class="col-sm-12 col-md-3">
+            <img class="img-fluid" src="assets/KFS.png">
+          </div>
+
+        </div>
+      </div>
+      <div class="col"></div>
+    </div>
+    <div class="row">
+      <div class="col-sm-12">
+        <div class="coolStuffWrapper">
+          <button type="button" class="btn btn-lg coolStuffBtn">Get Cool Stuff</button>
+        </div>
+      </div>
+    </div>
+  </div>
   
 </div>
 
