--- a/skateOrDieStarterTemplate/index.html
+++ b/skateOrDieStarterTemplate/index.html
@@ -130,12 +130,53 @@
     <div class="row">
       <div class="col-sm-12">
         <div class="coolStuffWrapper">
-          <button type="button" class="btn btn-lg coolStuffBtn">Get Cool Stuff</button>
+          <button type="button" class="btn btn-lg coolStuffBtn" data-bs-toggle="modal" data-bs-target="#coolStuffModal">Get Cool Stuff!</button>
         </div>
       </div>
     </div>
   </div>
-  
+
+  <!-- Modal -->
+  <!-- Cool Stuff Modal -->
+<div class="modal fade" id="coolStuffModal" tabindex="-1" aria-labelledby="coolStuffLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="contentLabel">Get Exclusive Content</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <div class="container-fluid">
+          <div class="row">
+            <div class="col-sm-12">
+              <img class="img-fluid" src="assets/KFS_modal.png">
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-sm-12">
+              <div class="modalFormWrapper">
+                <form>
+                  <div class="form-group">
+                    <label for="forNamet">What's your name?</label>
+                    <input type="text" class="form-control" id="formName" placeholder="Name">
+                  </div>
+                  <div class="form-group">
+                    <label for="forEmail">Where should we send your cool content?</label>
+                    <input type="text" class="form-control" id="formEmail" placeholder="Email">
+                  </div>
+                </form>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
+
 </div>
 
 
