added a 3rd row of images and buttons. section 80 compleet.

--- a/skateOrDieStarterTemplate/index.html
+++ b/skateOrDieStarterTemplate/index.html
@@ -136,6 +136,39 @@
     </div>
   </div>
 
+  <div class="sectionLight">
+    <div class="row">
+      <div class="col-sm-12">
+        <div  class="row">
+          <div class="col-sm-12 col-lg-4">
+            <img class="img-fluid imgCenter" src="assets/kickflip.jpg">
+            <div class="row">
+                <div class="col-sm-12">
+                  <button type="button" class="btn btn-danger btn-lg btnCenter">kickflip</button>
+                </div>
+            </div>
+          </div>
+          <div class="col-sm-12 col-lg-4">
+            <img class="img-fluid imgCenter" src="assets/360flip.jpg">
+            <div class="row">
+                <div class="col-sm-12">
+                  <button type="button" class="btn btn-danger btn-lg btnCenter">360 Flip</button>
+                </div>
+            </div>
+          </div>
+          <div class="col-sm-12 col-lg-4">
+            <img class="img-fluid imgCenter" src="assets/bscrook.jpg">
+            <div class="row">
+                <div class="col-sm-12">
+                  <button type="button" class="btn btn-danger btn-lg btnCenter">BS Crook</button>
+                </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
   <!-- Modal -->
   <!-- Cool Stuff Modal -->
 <div class="modal fade" id="coolStuffModal" tabindex="-1" aria-labelledby="coolStuffLabel" aria-hidden="true">
