--- a/skateOrDieStarterTemplate/index.html
+++ b/skateOrDieStarterTemplate/index.html
@@ -169,6 +169,19 @@
     </div>
   </div>
 
+  <footer class="footer bg-inverse bg-dark">
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-sm-12 col-lg-3">
+          <img class="img-fluid footerImg" src="assets/KFS_LIGHT.png">
+        </div>
+        <div class="col-sm-12 col-lg-9">
+          
+        </div>
+      </div>
+    </div>
+  </footer>
+
   <!-- Modal -->
   <!-- Cool Stuff Modal -->
   <div class="modal fade" id="coolStuffModal" tabindex="-1" aria-labelledby="coolStuffLabel" aria-hidden="true">
