font awesome favicons built. lesson 83 compleet.

--- a/skateOrDieStarterTemplate/index.html
+++ b/skateOrDieStarterTemplate/index.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="bootstrap-5.0.2-dist//css/bootstrap-grid.min.css">
   <link rel="stylesheet" href="bootstrap-5.0.2-dist/css/bootstrap.min.css">
   <!--CSS-->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="main.css">
 </head>
 
@@ -169,14 +170,23 @@
     </div>
   </div>
 
+  <!-- Footer -->
   <footer class="footer bg-inverse bg-dark">
     <div class="container-fluid">
       <div class="row">
         <div class="col-sm-12 col-lg-3">
           <img class="img-fluid footerImg" src="assets/KFS_LIGHT.png">
         </div>
-        <div class="col-sm-12 col-lg-9">
-          
+        <div class="col-sm-12 col-lg-9 socialWrapper">
+          <a href="https://facebook.com" target="_blank">
+            <i class="fa fa-facebook-square fa-3x" aria-hidden="true"></i>
+          </a>
+          <a href="https://google.com" target="_blank">
+            <i class="fa fa-google-plus-square fa-3x" aria-hidden="true"></i>
+          </a>
+          <a href="https://instagram.com" target="_blank">
+            <i class="fa fa-instagram fa-3x" aria-hidden="true"></i>
+          </a>
         </div>
       </div>
     </div>
